implementado hover nos links

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,12 +96,17 @@ nav ul {
   margin: 0;
 }
 
-nav ul li {
+nav ul li a {
   color: whitesmoke;
-  /* padding: 10px 20px; */
   cursor: pointer;
   font-size: 22px;
+  text-decoration: none;
 }
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
 
 /*Top Header  */
 #top-header {
@@ -118,6 +123,10 @@ nav ul li {
 
 #tools a {
   text-decoration: none;
+}
+
+#tools a:hover {
+  text-decoration: underline;
 }
 
 #tools,
