--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('../partials/head') %>
+  <head>
+    <%- include('../partials/head') %>
+  </head>
 
-<body>
+  <body>
     <div id="wrapper">
-        <%- include('../partials/header') %>
-        <%- include('../partials/navigation') %>
+      <%- include('../partials/header') %> <%- include('../partials/navigation')
+      %>
 
-        <main>
-            <%- body %>
-        </main>
+      <main><%- body %></main>
 
-        <%- include('../partials/footer') %>
+      <%- include('../partials/footer') %>
     </div>
-</body>
+  </body>
 </html>
