--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,10 @@
 
   <body>
     <div id="wrapper">
-      <%- include('../partials/header') %> <%- include('../partials/navigation')
-      %>
+      <%- include('../partials/header') %> 
+      <%- include('../partials/navigation')%>
 
-      <main><%- body %></main>
+      <main><%- body %></main>  <!-- essa linha e hardcode pelo Express, com ela automaticamente a pag. Index.ejs e carregada e comeca a brincadeira -->
 
       <%- include('../partials/footer') %>
     </div>
