--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,9 @@
+
 <section id="heroImage">
   <p>Welcome to CSE Motors !</p>
+  <h1>
+    <%- messages() %>
+  </h1>
   <img src="/images/vehicles/delorean-removebg-preview.png" alt="" />
   <div id="carFeatures">
     <ul>
