week 4 - corrigido erro ao inserir dados no banco de dados

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -7,7 +7,7 @@
     <h1>Page Not Found</h1>
 <% } %>
 
-<% messages() %>
+<%- messages() %>
 
 <form class="formulario" action="/account/login" method="post">
     <fieldset>
