--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -333,10 +333,77 @@ footer {
   list-style-type: none; 
 }
 
+/* css das telas de login e register */
+.formulario {
+  display: flex; 
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center; 
+  align-items: center;
+  background-color: white;  
+  padding: 20px;
+}
+
+h1 {
+  margin-top: 0;
+  padding-left: 10px;
+  padding-top: 10px;
+
+}
+
+fieldset {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #b4b2b2;
+  padding: 1em;
+  border-radius: 8px;
+  width: 400px;
+}
+
+legend {
+  font-weight: bold;
+}
+
+fieldset button, input {
+  padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+fieldset button:hover {
+  background-color: #b4b2b2;
+  font-weight: bold;
+}
+ fieldset input:hover {
+  border-bottom: 3px solid rgb(82, 80, 80);
+  border-top: 3px solid rgb(82, 80, 80);
+  border-right: 3px solid rgb(82, 80, 80);
+  
+} 
+fieldset label, p {
+  margin-left: 5px;
+}
+#no-account {
+  padding: 10px;
+  margin: 10px;
+}
+#no-account a:hover {
+  font-weight: bold;
+}
+input:required:invalid {
+  border-left: 5px solid red;
+}
+input:focus:invalid {
+  background-color: rgb(243, 213, 213);
+}
+input:required:valid {
+  background-color: rgb(220, 241, 220);
+} 
+
 
 @media (max-width: 785px) {
 #carFeatures {
-  width: 50vw; /* Increase width for smaller screens */
+  width: 50vw; 
   left: 5%;
   top: 20%;
 }
