--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -8,43 +8,47 @@
 <% } %>
 
 <%- messages() %>
+<span><% errors%></span>
+<% if (errors && errors.length > 0) { %>
+  <div class="bg-red-100 text-red-800 p-4 rounded mb-4">
+    <ul>
+      <% errors.forEach(error => { %>
+        <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
+  </div>
+<% } %>
 
 <form id="addInventoryForm" class="formulario" action="/inv/add-inventory" method="post" >
   <fieldset id="new-inventory-fieldset">
     <label for="classificationList">Classification</label>
-    <Select id="classification">
-      <option value="" disabled>Choose a Classifation</option>
-      <option value="">Tipo A</option>
-      <option value="">Tipo B</option>
-      <option value="">Tipo C</option>
-    </Select>
-
+    <%- classificationList %>
     <label for="make">Make</label>
-    <input type="text" id="make" name="make" required value="<%= typeof make != 'undefined' ? make : '' %>" placeholder="Min of 3 characters">
+    <input type="text" id="make" name="inv_make" required value="<%= typeof inv_make != 'undefined' ? inv_make : '' %>" placeholder="Min of 3 characters">
   
     <label for="model">Model</label>
-    <input type="text" id="model" name="model" required value="<%= typeof model != 'undefined' ? model : '' %>" placeholder="Min of 3 characters">
+    <input type="text" id="model" name="inv_model" required value="<%= typeof inv_model != 'undefined' ? inv_model : '' %>" placeholder="Min of 3 characters">
   
     <label for="description">Description</label>
-    <textarea id="description" rows="3"  name="description" required><%= typeof description != 'undefined' ? description : '' %></textarea>
+    <textarea id="description" rows="3"  name="inv_description" required><%= typeof inv_description != 'undefined' ? inv_description : '' %></textarea>
   
     <label for="image">Image Path</label>
-    <input type="text" id="image" name="image" required value="<%= typeof image != 'undefined' ? image : '/images/vehicles/no-image.png' %>">
+    <input type="text" id="image" name="inv_image" required value="<%= typeof inv_image != 'undefined' ? inv_image : '/images/vehicles/no-image.png' %>">
   
     <label for="thumbnail">Thumbnail Path</label>
-    <input type="text" id="thumbnail" name="thumbnail" required value="<%= typeof thumbnail != 'undefined' ? thumbnail : '/images/vehicles/no-image.png' %>">
+    <input type="text" id="thumbnail" name="inv_thumbnail" required value="<%= typeof inv_thumbnail != 'undefined' ? inv_thumbnail : '/images/vehicles/no-image.png' %>">
   
     <label for="price">Price</label>
-    <input type="number" id="price" name="price" required min="0" step="0.01" value="<%= typeof price != 'undefined' ? price : '' %>"  placeholder="decimal or integer">
+    <input type="number" id="price" name="inv_price" required min="0" step="0.01" value="<%= typeof inv_price != 'undefined' ? inv_price : '' %>"  placeholder="decimal or integer">
   
     <label for="year">Year</label>
-    <input type="number" id="year" name="year" required min="1900" max="2100" value="<%= typeof year != 'undefined' ? year : '' %>" placeholder="4-digit year">
+    <input type="number" id="year" name="inv_year" required min="1900" max="2100" value="<%= typeof inv_year != 'undefined' ? inv_year : '' %>" placeholder="4-digit year">
   
     <label for="miles">Miles</label>
-    <input type="number" id="miles" name="miles" required min="0" value="<%= typeof miles != 'undefined' ? miles : '' %>" placeholder="digits only">
+    <input type="number" id="miles" name="inv_miles" required min="0" value="<%= typeof inv_miles != 'undefined' ? inv_miles : '' %>" placeholder="digits only">
   
     <label for="color">Color</label>
-    <input type="text" id="color" name="color" required value="<%= typeof color != 'undefined' ? color : '' %>">
+    <input type="text" id="color" name="inv_color" required value="<%= typeof inv_color != 'undefined' ? inv_color : '' %>">
   
     <button type="submit">Add Vehicle</button>
   </fieldset>
@@ -55,7 +59,7 @@
   #new-inventory-fieldset {
     width: 60%;
   }
-  #new-inventory-fieldset #classification {
+  #new-inventory-fieldset #classificationList {
     width: 40%;
     margin-top: 5px;
     margin-bottom: 5px;
