--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,31 @@
     <span class="siteName">
       <a href="/" title="Return to home page">CSE Motors</a>
     </span>
+    <!--
     <div id="tools">
       <a title="Click to log in" href="/account/login">My Account</a>
-    </div>
+    </div> -->
+    <div id="tools">
+    <% if (locals.loggedin) { %>
+      <p>Logged in as, <%= firstname %>! <a href="/account/logout">Logout</a></p>
+    <% } else { %>
+      <a href="/account/login">Login</a>
+    <% } %>
+  </div>
+
+<style>
+  #tools p, a {
+    margin: 20px;
+  }
+  #tools a {
+    text-decoration: underline;
+  }
+  #tools a:hover {
+    font-weight: bold;
+  }
+
+
+</style>
+
+
   </header>
