implementado controle de usuarios

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -19,10 +19,19 @@
     <p>Passwords must be minimun of 12 characters and include 1 capital letter, 1 number and 1 special character.</p>
     <button id="btn-show-password" type="button"> Show Password</button>
     <button id="login" type="submit">Login</button>
+
+    <h5>Admin:   admin@csemotors.ca       pass: PassWord@1234</h5>
+    <h5>Client:  client@csemotors.ca      pass: PassWord@1234</h5>
+
     </fieldset>
     <label id="no-account" for="sing-up">No account? <a  id="sing-up" href="/account/register">Sing up</a></label>
 </div>
    
+<style>
+    .formulario h5 {
+        margin: 10px;
+    }
+</style>
 
 
 <script>
