--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -24,7 +24,7 @@
             <legend>Short Cut Credentials</legend>
             <p class="p-short-cut"><a href="#" data-email="admin@csemotors.ca" data-pass="PassWord@1234">Admin</a></p>
             <p class="p-short-cut"><a href="#" data-email="employee@csemotors.ca" data-pass="PassWord@1234">Employee</a></p>
-            <p class="p-short-cut"><a href="#" data-email="client@csemotors.ca" data-pass="PassWord@1234">Client</a></p>
+            <p class="p-short-cut"><a href="#" data-email="client@csemortors.ca" data-pass="PassWord@1234">Client</a></p>
         </fieldset>
 
     </fieldset>
